--- a/kong.env
+++ b/kong.env
@@ -2,7 +2,7 @@
 KONG_PG_HOST=kong-database
 KONG_PG_PASSWORD=password
 KONG_CASSANDRA_CONTACT_POINTS=kong-database
-KONG_LOG_LEVEL=debug
+KONG_LOG_LEVEL=info
 KONG_PROXY_ACCESS_LOG=/dev/stdout
 KONG_PROXY_ERROR_LOG=/dev/stderr
 KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl
